Updated Header with NavBar

--- a/views/hello.twig
+++ b/views/hello.twig
@@ -1,7 +1,7 @@
 {% include 'header.twig' %}
 <div class="container">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4">
+        <div class="col-md-6 col-md-offset-4">
             <h1>The Big Lebowski</h1>
         </div>
     </div>
@@ -27,6 +27,16 @@
             Let me tell you something, pendejo. You pull any your crazy shit with us, you flash a piece out on the lanes, I'll take it away from you and stick it up your ass and pull the fucking trigger til it goes "click". I didn't blame anyone for the loss of my legs, some chinaman in Korea took them from me but I went out and achieved anyway.
 
             Vee could do things you only dreamed of, Lebowski. I'll tell you who I am! I'm the guy who's gonna KICK YOUR PHONY GOLDBRICKING ASS! HERE'S WHAT HAPPENS, LARRY! They're nihilists. The Knutsens. It's a wandering daughter job. Bunny Lebowski, man. Her real name is Fawn Knutsen. Her parents want her back. I got information—new shit has come to light and—shit, man! She kidnapped herself! WALTER, FOR CHRIST'S SAKE! HE'S CRIPPLED! PUT HIM DOWN!
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <img class="thumbnail" src="http://placekitten.com/500/300" alt="1"/>
+        </div>
+        <div class="col-md-6">
+            Lebowski ipsum come and get it. Fucking nihilist. Dolor sit amet, consectetur adipiscing elit praesent ac magna justo pellentesque ac. Please see him, Jeffrey. He's a good man. And thorough. Lectus quis elit blandit fringilla. I got information—new shit has come to light and—shit, man! She kidnapped herself! A ut turpis praesent felis ligula, malesuada suscipit malesuada non, ultrices. Wal, I lost m'chain of thought here. But—aw hell, I done innerduced him enough. Non urna sed orci ipsum, placerat id condimentum.
+
+            And yet his son is a fucking dunce. Rutrum, rhoncus ac lorem aliquam placerat. They won't hurt us, Donny. These men are cowards. Posuere neque, at dignissim magna ullamcorper in aliquam sagittis massa. The nail polish, Walter. Ac tortor ultrices faucibus curabitur eu mi sapien, ut ultricies. It's a fucking show dog with fucking papers. You can't board it. It gets upset, its hair falls out. Ipsum morbi eget risus nulla nullam vel nisi enim, vel.
         </div>
     </div>
 </div>
