--- a/views/header.twig
+++ b/views/header.twig
@@ -6,5 +6,19 @@
     <link rel="stylesheet" type="text/css" href="{{ app.request.basepath }}/assets/css/bootstrap-theme.css">
     <link rel="stylesheet" type="text/css" href="{{ app.request.basepath }}/assets/css/site.css">
 </head>
+
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container">
+        <div class="row">
+            <a class="navbar-brand" href="#">Silex</a>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Silex Home</a></li>
+                <li><a href="#">Test Page 1</a></li>
+                <li><a href="#">Test Page 2</a></li>
+            </ul>
+            <button class="btn btn-primary btn-lg pull-right">Login</button>
+        </div>
+    </div>
+</nav>
 <body>
 
